--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -1,19 +1,23 @@
 <html>
-    <head>
-        <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
-    </head>
+  <head>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
   <body>
     <div id="position"></div>
-
-    <div id="status">
-        HP: <span id="HP"> 5 / 5</span>
-    </div>
+    <br />
+    <div id="status">HP: <span id="HP"> 5 / 5</span></div>
+    <br />
     <div id="game"></div>
+    <br />
     <div id="event_result"></div>
+    <br />
+    <div id="player_status"></div>
+    <br />
     <div id="control">
       <button value="1">동</button>
       <button value="3">서</button>
@@ -21,54 +25,52 @@
       <button value="0">북</button>
     </div>
 
-  <script>
+    <script>
+      const sendAction = (action, params = {}) => {
+        $.ajax({
+          url: "/action",
+          headers: {
+            Authorization: "Bearer " + key,
+          },
+          method: "POST",
+          data: `action=${action}&direction=${params.direction}`,
+        }).done((req) => {
+          const { player, field, event } = req;
 
-const sendAction = (action, params = {}) => {
-      $.ajax({
-        url: "/action",
-        headers: {
-          Authorization: "Bearer " + key
-        },
-        method: "POST",
-        data: `action=${action}&direction=${params.direction}`,
-      }).done((req) => {
-        const { player, field, event } = req;
+          $("#game").text(field.description);
+          $("#position").text(`(${field.x},${field.y})`);
+          const x = field.x;
+          const y = field.y;
+          field.canGo.forEach((canGo, idx) => {
+            const dom = $(`button[value="${idx}"]`);
+            canGo === 0 ? dom.hide() : dom.show();
+            dom.unbind("click");
+            if (canGo === 1) {
+              dom.bind("click", function () {
+                sendAction("move", { direction: idx });
+              });
+            }
+          });
 
-        $('#game').text(field.description);
-        $('#position').text(`(${field.x},${field.y})`);
-        const x = field.x;
-        const y = field.y;
-        field.canGo.forEach((canGo, idx) => {
-          const dom = $(`button[value="${idx}"]`);
-          canGo === 0 ? dom.hide() : dom.show();
-          dom.unbind('click');
-          if (canGo === 1) {
-            dom.bind('click', function () {
-              sendAction('move', {direction: idx});
-            });
+          if (event) {
+            $("#event_result").text(event.description);
+          } else {
+            $("#event_result").text("아무일도 일어나지 않았다.");
           }
-        })
 
-        if (event) {
-          $('#event_result').text(event.description);
-        } else {
-          $('#event_result').text("아무일도 일어나지 않았다.");
-        }
+          $("#player_status").text(
+            `레벨: ${player.level}, str: ${player.str}, def: ${player.def}, 아이템: ${player.items}, exp: ${player.exp} / ${player.maxExp}`
+          );
 
-        $('#HP').text(`${player.HP} / ${player.maxHP}`)
-      });
+          $("#HP").text(`${player.HP} / ${player.maxHP}`);
+        });
+      };
+      const key = localStorage.getItem("_key");
+      if (!key) {
+        location.href = "/";
+      }
 
-    } 
-    const key = localStorage.getItem('_key');
-    if (!key) {
-      location.href = "/";
-    }
-
-    sendAction("query");
-
-    
-
-  </script>
+      sendAction("query");
+    </script>
   </body>
 </html>
-
