--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -5,6 +5,12 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
+    <style type="text/css">
+      body {
+        text-align: center;
+        padding: 5% 0 20% 0;
+      }
+    </style>
   </head>
 
   <body>
@@ -16,6 +22,7 @@
     <br />
     <div id="event_result"></div>
     <br />
+    <div id="goto_zero"></div>
     <div id="player_status"></div>
     <br />
     <div id="control">
@@ -36,8 +43,8 @@
           data: `action=${action}&direction=${params.direction}`,
         }).done((req) => {
           const { player, field, event } = req;
+          $("#game").html(field.description);
 
-          $("#game").text(field.description);
           $("#position").text(`(${field.x},${field.y})`);
           const x = field.x;
           const y = field.y;
@@ -53,7 +60,7 @@
           });
 
           if (event) {
-            $("#event_result").text(event.description);
+            $("#event_result").html(event.description);
           } else {
             $("#event_result").text("아무일도 일어나지 않았다.");
           }
@@ -63,6 +70,12 @@
           );
 
           $("#HP").text(`${player.HP} / ${player.maxHP}`);
+
+          if (event.death === true) {
+            $("#goto_zero").html(
+              '<button onclick="(() => window.location.reload())()">평원으로!</button>'
+            );
+          }
         });
       };
       const key = localStorage.getItem("_key");
