--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -10,10 +10,133 @@
         text-align: center;
         padding: 5% 0 20% 0;
       }
+      #container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      #map {
+        display: grid;
+        grid-template-rows: repeat(10, 10px);
+        grid-template-columns: repeat(10, 10px);
+      }
+      .box {
+        border: 1px solid black;
+        height: 10px;
+        width: 10px;
+      }
+      .red {
+        background-color: red;
+      }
     </style>
   </head>
 
   <body>
+    <div id="container">
+      <div id="map">
+        <div class="box" id="box1"></div>
+        <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div>
+        <div class="box" id="box4"></div>
+        <div class="box" id="box5"></div>
+        <div class="box" id="box6"></div>
+        <div class="box" id="box7"></div>
+        <div class="box" id="box8"></div>
+        <div class="box" id="box9"></div>
+        <div class="box" id="box10"></div>
+        <div class="box" id="box11"></div>
+        <div class="box" id="box12"></div>
+        <div class="box" id="box13"></div>
+        <div class="box" id="box14"></div>
+        <div class="box" id="box15"></div>
+        <div class="box" id="box16"></div>
+        <div class="box" id="box17"></div>
+        <div class="box" id="box18"></div>
+        <div class="box" id="box19"></div>
+        <div class="box" id="box20"></div>
+        <div class="box" id="box21"></div>
+        <div class="box" id="box22"></div>
+        <div class="box" id="box23"></div>
+        <div class="box" id="box24"></div>
+        <div class="box" id="box25"></div>
+        <div class="box" id="box26"></div>
+        <div class="box" id="box27"></div>
+        <div class="box" id="box28"></div>
+        <div class="box" id="box29"></div>
+        <div class="box" id="box30"></div>
+        <div class="box" id="box31"></div>
+        <div class="box" id="box32"></div>
+        <div class="box" id="box33"></div>
+        <div class="box" id="box34"></div>
+        <div class="box" id="box35"></div>
+        <div class="box" id="box36"></div>
+        <div class="box" id="box37"></div>
+        <div class="box" id="box38"></div>
+        <div class="box" id="box39"></div>
+        <div class="box" id="box40"></div>
+        <div class="box" id="box41"></div>
+        <div class="box" id="box42"></div>
+        <div class="box" id="box43"></div>
+        <div class="box" id="box44"></div>
+        <div class="box" id="box45"></div>
+        <div class="box" id="box46"></div>
+        <div class="box" id="box47"></div>
+        <div class="box" id="box48"></div>
+        <div class="box" id="box49"></div>
+        <div class="box" id="box50"></div>
+        <div class="box" id="box51"></div>
+        <div class="box" id="box52"></div>
+        <div class="box" id="box53"></div>
+        <div class="box" id="box54"></div>
+        <div class="box" id="box55"></div>
+        <div class="box" id="box56"></div>
+        <div class="box" id="box57"></div>
+        <div class="box" id="box58"></div>
+        <div class="box" id="box59"></div>
+        <div class="box" id="box60"></div>
+        <div class="box" id="box61"></div>
+        <div class="box" id="box62"></div>
+        <div class="box" id="box63"></div>
+        <div class="box" id="box64"></div>
+        <div class="box" id="box65"></div>
+        <div class="box" id="box66"></div>
+        <div class="box" id="box67"></div>
+        <div class="box" id="box68"></div>
+        <div class="box" id="box69"></div>
+        <div class="box" id="box70"></div>
+        <div class="box" id="box71"></div>
+        <div class="box" id="box72"></div>
+        <div class="box" id="box73"></div>
+        <div class="box" id="box74"></div>
+        <div class="box" id="box75"></div>
+        <div class="box" id="box76"></div>
+        <div class="box" id="box77"></div>
+        <div class="box" id="box78"></div>
+        <div class="box" id="box79"></div>
+        <div class="box" id="box80"></div>
+        <div class="box" id="box81"></div>
+        <div class="box" id="box82"></div>
+        <div class="box" id="box83"></div>
+        <div class="box" id="box84"></div>
+        <div class="box" id="box85"></div>
+        <div class="box" id="box86"></div>
+        <div class="box" id="box87"></div>
+        <div class="box" id="box88"></div>
+        <div class="box" id="box89"></div>
+        <div class="box" id="box90"></div>
+        <div class="box" id="box91"></div>
+        <div class="box" id="box92"></div>
+        <div class="box" id="box93"></div>
+        <div class="box" id="box94"></div>
+        <div class="box" id="box95"></div>
+        <div class="box" id="box96"></div>
+        <div class="box" id="box97"></div>
+        <div class="box" id="box98"></div>
+        <div class="box" id="box99"></div>
+        <div class="box" id="box100"></div>
+      </div>
+    </div>
+    <br />
     <div id="position"></div>
     <br />
     <div id="status">HP: <span id="HP"> 5 / 5</span></div>
@@ -31,7 +154,6 @@
       <button value="2">남</button>
       <button value="0">북</button>
     </div>
-
     <script>
       const sendAction = (action, params = {}) => {
         $.ajax({
@@ -48,6 +170,10 @@
           $("#position").text(`(${field.x},${field.y})`);
           const x = field.x;
           const y = field.y;
+          for (let i = 1; i <= 100; i++) {
+            $(`#box${i}`).removeClass("red");
+          }
+          $(`#box${10 * y + x + 1}`).addClass("red");
           field.canGo.forEach((canGo, idx) => {
             const dom = $(`button[value="${idx}"]`);
             canGo === 0 ? dom.hide() : dom.show();
