--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -194,13 +194,13 @@
           $("#player_status").text(
             `레벨: ${player.level}, str: ${player.str}, def: ${player.def}, 아이템: ${player.items}, exp: ${player.exp} / ${player.maxExp}`
           );
-
           $("#HP").text(`${player.HP} / ${player.maxHP}`);
 
           if (event.death === true) {
             $("#goto_zero").html(
               '<button onclick="(() => window.location.reload())()">평원으로!</button>'
             );
+            $("#HP").text(`0 / ${player.maxHP}`);
           }
         });
       };
