--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -682,6 +682,14 @@
       <button value="2">남</button>
       <button value="0">북</button>
     </div>
+
+    <figure>
+      <audio controls autoplay src="https://cf-media.sndcdn.com/KCeL1xTu8NHa.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vS0NlTDF4VHU4TkhhLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE2MDc4NjkzNjR9fX1dfQ__&Signature=aueCVGKVx~5Jtk96faMVURlA6tQObrHeE9UYp7HmVGH3XqXL5cJOyEhViuaFXqPdZSjYZVKdqV~uaI5p4fMLa2PmkiKuGJQov3WcIpot9~l1d2zLY6smXvWD5nfPSw-vaUKQaqFf6lLy7M98N2rI2aatU4A-qOxHQdw10kVReIRz7okdSiYifYI323WXplIPoPY6Hita~OVVXf-dTK3KMsJIHSbSvrrrqpCcc31zKFwHaS1KxQ2yk4DsmqwRsVyMD1vJWKQGCjMKLnEVxdxFUykb5GL2TibCOa5YxaRcwY0czC69tnE~xPZgy0wjiHDXMC8Z1cNaqYUhaGqEQgX5fg__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ">
+        Your browser does not support the
+        <code>audio</code> element.
+      </audio>
+    </figure>
+
     <script>
       const sendAction = (action, params = {}) => {
         $.ajax({
