--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -688,7 +688,7 @@
         controls
         autoplay
         loop
-        src="https://cf-media.sndcdn.com/KCeL1xTu8NHa.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vS0NlTDF4VHU4TkhhLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE2MDc4NjkzNjR9fX1dfQ__&Signature=aueCVGKVx~5Jtk96faMVURlA6tQObrHeE9UYp7HmVGH3XqXL5cJOyEhViuaFXqPdZSjYZVKdqV~uaI5p4fMLa2PmkiKuGJQov3WcIpot9~l1d2zLY6smXvWD5nfPSw-vaUKQaqFf6lLy7M98N2rI2aatU4A-qOxHQdw10kVReIRz7okdSiYifYI323WXplIPoPY6Hita~OVVXf-dTK3KMsJIHSbSvrrrqpCcc31zKFwHaS1KxQ2yk4DsmqwRsVyMD1vJWKQGCjMKLnEVxdxFUykb5GL2TibCOa5YxaRcwY0czC69tnE~xPZgy0wjiHDXMC8Z1cNaqYUhaGqEQgX5fg__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ"
+        src="https://cf-media.sndcdn.com/cSnaV7AOIamR.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vY1NuYVY3QU9JYW1SLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE2MDc5MTYxMjh9fX1dfQ__&Signature=SH2F5fDqdxfSz759QwDHduFzpcEs2y5~bQWqwfLTgKlfoediaJxO9sJw6ldbZlrYQJM7N9Xl9d9RRPrUqEpoyuucNUN5fDqYeqU07nD~VCRTJcJ7YiCjt~rRHZjFyN-5edSR0qaVZIBUzB4niUZkb~qGldQe5uiEHBqgQ~iVh35Fqe19s0~NcnNf5KnF-WkyxSOaGPqrWF3hserWlJee0tmN~ItlN9jNdCqcZihrT6Wamm0MbYTxPcVlZioOfHb9~visIIdtwQcI5b48LMyyG~j5~Z6akheZ-4OPlRNGWn67S~NtNOXk3ZoSA0yYLjDadKpOD7-V2LfebCwO1zUZmg__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ"
       >
         Your browser does not support the
         <code>audio</code> element.
