--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,8 @@
   crossorigin="anonymous"></script>
   <body>
     <%= gameName %>에 온 걸 환영합니다. 당신의 이름은?
+    <br>
+    (4자 이상 12자 이하의 이름만 입력됩니다, 이미 등록된 이름은 사용할 수 없습니다)
     <div class=""></div>
 
     <form id="form" action="/signup">
