시작 능력치 재시도 해보려했는데...
처참히 실패했고
제가 쓴 코드들 다 // 했는데도
오류가 나는 것 같아요ㅠㅠ
제가 커밋하기 이전으로 돌아가는 거 해주실 수 있나요?ㅠㅠ

--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -682,6 +682,7 @@
       <button value="2">남</button>
       <button value="0">북</button>
     </div>
+    <!-- <br /><div id="reroll"></div> -->
 
     <figure>
       <audio
@@ -706,6 +707,9 @@
           data: `action=${action}&direction=${params.direction}`,
         }).done((req) => {
           const { player, field, event } = req;
+
+          // player.status === 0 ? reroll.show() : reroll.hide();
+
           $("#game").html(field.description);
 
           $("#position").text(`(${field.x},${field.y})`);
@@ -746,6 +750,12 @@
           }
         });
       };
+
+      // const reroll = $('#reroll');
+      // reroll.bind('click',function () {
+      //   sendAction('reroll')
+      // });
+
       const key = localStorage.getItem("_key");
       if (!key) {
         location.href = "/";
