이미 가입된 아이디 알려주기 도전...

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -25,7 +25,8 @@
        e.preventDefault();
        const action = $(this).attr('action');
        $.post(action, $(this).serialize(),(res) => {
-         if(res.key) {
+         if(res.message) alert(res.message)
+         else if (res.key) {
           localStorage.setItem('_key', res.key);
           location.href = '/game';
          }
