--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -684,18 +684,6 @@
     </div>
     <!-- <br /><div id="reroll"></div> -->
 
-    <figure>
-      <audio
-        controls
-        autoplay
-        loop
-        src="https://cf-media.sndcdn.com/cSnaV7AOIamR.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vY1NuYVY3QU9JYW1SLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE2MDgwMzIyMTR9fX1dfQ__&Signature=G9kKd8GDft7uMUykvkL3LGfOoyqJumHLWJPAP6nUm2uidX2MF-yxl-t8LEZHiq4bXc30Pto~Juua0onXWWuPxy98-BOItQBM0rpkd5g-gY1Wk7GH307vaxDy0oCAg2luWlwhsuWjSzlW-XQA5NOsmyiT3-ht471vl~2SAZJBqNjxhCCLEoS1PHS4OFWGjkMnznN-t1-YB2kJIlOA~Xi3MUkv8vGZntGhDL8Ye8fDcuRPXgZM5QWRRHOzKJoZCx8idyAOxbQsewRqHEo46WBQMGamfrSzxafN4W83ikjD3QipWrF2VwQqTXckpI~csjSYpkFxUtuhHC8BR7iS8ggDTA__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ"
-      >
-        Your browser does not support the
-        <code>audio</code> element.
-      </audio>
-    </figure>
-
     <script>
       const sendAction = (action, params = {}) => {
         try {
@@ -741,11 +729,14 @@
 
             if (event && event.death === true) {
               $("#goto_zero").html(
-                '<button onclick="(() => window.location.reload())()">평원으로!</button>'
+                '<button onclick="(() => window.location.reload())()">집으로!</button>'
               );
               $("#control").addClass("invisible");
               $("#HP").text(`0 / ${player.maxHP}`);
             }
+            if (player.name === '자가격리') $
+            ("#control").addClass("invisible");
+
           });
         } catch (error) {
           //console.log(JSON.strigify(error));
