--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <%= gameName %>
     <br>
-    이시국에 게임을 가려고 하는 당신의 이름은?
+    이시국에 나들이를 가려고 하는 당신의 이름은?
     <br>
     (4자 이상 12자 이하의 이름만 입력됩니다, 이미 등록된 이름은 사용할 수 없습니다)
     <div class=""></div>
